<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buttons">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Row1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/Row2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <Button
            android:id="@+id/buttonModulus"
            android:layout_width="72dp"
            android:layout_height="@dimen/ButtonHeight"
            android:backgroundTint="@color/ButtonSecondary"
            android:text="@string/modulus"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button8"
            android:layout_width="72dp"
            android:layout_height="@dimen/ButtonHeight"
            android:backgroundTint="@color/ButtonPrimary"
            android:text="@string/eight"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button9"
            android:layout_width="72dp"
            android:layout_height="@dimen/ButtonHeight"
            android:backgroundTint="@color/ButtonPrimary"
            android:text="@string/nine"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button8"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="72dp"
            android:layout_height="@dimen/ButtonHeight"
            android:backgroundTint="@color/ButtonSecondary"
            android:text="@string/divide"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button9"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button7"
            android:layout_width="72dp"
            android:layout_height="@dimen/ButtonHeight"
            android:backgroundTint="@color/ButtonPrimary"
            android:text="@string/seven"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonModulus"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Row2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/Row3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Row1">

        <Button
            android:id="@+id/buttonSQRT"
            style="?android:attr/buttonBarStyle"
            android:layout_width="72dp"
            android:layout_height="@dimen/ButtonHeight"
            android:backgroundTint="@color/ButtonSecondary"
            android:text="@string/sqrt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonBarStyle"
            android:layout_width="72dp"
            android:layout_height="@dimen/ButtonHeight"
            android:backgroundTint="@color/ButtonPrimary"
            android:text="@string/four"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonSQRT"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/button5"
            style="?android:attr/buttonBarStyle"
            android:layout_width="72dp"
            android:layout_height="@dimen/ButtonHeight"
            android:backgroundTint="@color/ButtonPrimary"
            android:text="@string/five"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/button6"
            style="?android:attr/buttonBarStyle"
            android:layout_width="72dp"
            android:layout_height="@dimen/ButtonHeight"
            android:backgroundTint="@color/ButtonPrimary"
            android:text="@string/six"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonMultiply"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/buttonMultiply"
            style="?android:attr/buttonBarStyle"
            android:layout_width="72dp"
            android:layout_height="@dimen/ButtonHeight"
            android:backgroundTint="@color/ButtonSecondary"
            android:text="@string/multiply"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Row3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/Row4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Row2">

        <Button
            android:id="@+id/buttonCE"
            style="?android:attr/buttonBarStyle"
            android:layout_width="72dp"
            android:layout_height="@dimen/ButtonHeight"
            android:backgroundTint="@color/ButtonSecondary"
            android:text="@string/clear_entity"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonBarStyle"
            android:layout_width="72dp"
            android:layout_height="@dimen/ButtonHeight"
            android:backgroundTint="@color/ButtonPrimary"
            android:text="@string/one"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonCE"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonBarStyle"
            android:layout_width="72dp"
            android:layout_height="@dimen/ButtonHeight"
            android:backgroundTint="@color/ButtonPrimary"
            android:text="@string/two"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonBarStyle"
            android:layout_width="72dp"
            android:layout_height="@dimen/ButtonHeight"
            android:backgroundTint="@color/ButtonPrimary"
            android:text="@string/three"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/buttonMinus"
            style="?android:attr/buttonBarStyle"
            android:layout_width="72dp"
            android:layout_height="@dimen/ButtonHeight"
            android:backgroundTint="@color/ButtonSecondary"
            android:text="@string/minus"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Row4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/Row5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Row3">

        <Button
            android:id="@+id/buttonClear"
            style="?android:attr/buttonBarStyle"
            android:layout_width="72dp"
            android:layout_height="@dimen/ButtonHeight"
            android:backgroundTint="@color/ButtonSecondary"
            android:text="@string/clear"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/button0"
            style="?android:attr/buttonBarStyle"
            android:layout_width="72dp"
            android:layout_height="@dimen/ButtonHeight"
            android:backgroundTint="@color/ButtonPrimary"
            android:text="@string/zero"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonDot"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonClear"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/buttonDot"
            style="?android:attr/buttonBarStyle"
            android:layout_width="72dp"
            android:layout_height="@dimen/ButtonHeight"
            android:backgroundTint="@color/ButtonPrimary"
            android:text="@string/dot"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonNegative"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/buttonNegative"
            style="?android:attr/buttonBarStyle"
            android:layout_width="72dp"
            android:layout_height="@dimen/ButtonHeight"
            android:backgroundTint="@color/ButtonPrimary"
            android:text="@string/negative"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonDot"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/buttonPlus"
            style="?android:attr/buttonBarStyle"
            android:layout_width="72dp"
            android:layout_height="@dimen/ButtonHeight"
            android:backgroundTint="@color/ButtonSecondary"
            android:text="@string/plus"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonNegative"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Row5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Row4">

        <Button
            android:id="@+id/buttonEquals"
            style="?android:attr/buttonBarStyle"
            android:layout_width="144dp"
            android:layout_height="@dimen/ButtonHeight"
            android:backgroundTint="@color/ButtonSecondary"
            android:text="@string/equals"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>